--- a/TelemipAdapter/appsettings.json
+++ b/TelemipAdapter/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MQTTServiceUrl": "185.251.91.59",
+    "MQTTServiceUrl": "mosquitto",
     "MQTTServicePort": "1883"
   },
   "Logging": {
